--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,23 @@
 
+И node pg работоспособность.
+Сервер АПИ делать полностью на вебсокетах. Статику раздавать нгиниксом. Нгиникс не должен роутить апи вебсокета так как статика и апи на разных доменах.
+Как стопается на ошибках как с отладкой.
+Покажет ли утечку конекшенов и незакрытых транзакций. Дисконект сокета вовремя транзикции.
+
+Конекшн игры авторизовать по пользователю и гейм тейбл. Не коннектить если такой игрок уже есть. другого такого же. Актуальный стейт держать в памяти вытащив из бд на валидном коннекте
+
+удальть messages error_reports
+
+field_roles_view, create, update
+
+при создании поля индекс надывать имя поля + имя ноды
+
+Crud id ноды текстовый не номер url тоже 
+
+фореинг рестрикшны не созвавать в коде
+
+ права доступа проверять только в crud запросах на входе от клиента. А не в функциях записи чтения удаления апдейта записей в бд. Эти функции вызываются из хендлеров и там доступ весь всегда. Юзер туда передается только для привязки юзера и группы.
+
 запрсы к бд в отладке завернуть в отдельный скрипт child_process и запросы r tyve выполнять через sync-request:
  https://www.npmjs.com/package/sync-request
 
@@ -13,7 +32,6 @@
 Сделать безопасный выход с ожиданием всех запросов и закрытием прослушки сокета сразу. При закрытии сейвить сессии при старте зпгружать сессии.
 
 клик по аватару гостя открывает ошибку. Аватар гостя рендерится в прод билде
-
 
 ключи у langs не выставляются.
 
