--- a/todo.txt
+++ b/todo.txt
@@ -1,14 +1,18 @@
 
-И node pg работоспособность.
-Сервер АПИ делать полностью на вебсокетах. Статику раздавать нгиниксом. Нгиникс не должен роутить апи вебсокета так как статика и апи на разных доменах.
-Как стопается на ошибках как с отладкой.
-Покажет ли утечку конекшенов и незакрытых транзакций. Дисконект сокета вовремя транзикции.
+заменть mysql на pg
 
-Конекшн игры авторизовать по пользователю и гейм тейбл. Не коннектить если такой игрок уже есть. другого такого же. Актуальный стейт держать в памяти вытащив из бд на валидном коннекте
+preact всместо реакта
 
-удальть messages error_reports
+
 
 field_roles_view, create, update
+
+
+енум типНоды   раздел. документ. noDBdoc
+
+енум тип поля.  stored  no-stored  client-side-only
+
+енум где рендерить поле. в форме, меню, футере, хеадере.
 
 при создании поля индекс надывать имя поля + имя ноды
 
@@ -16,18 +20,12 @@ Crud id ноды текстовый не номер url тоже
 
 фореинг рестрикшны не созвавать в коде
 
- права доступа проверять только в crud запросах на входе от клиента. А не в функциях записи чтения удаления апдейта записей в бд. Эти функции вызываются из хендлеров и там доступ весь всегда. Юзер туда передается только для привязки юзера и группы.
-
-запрсы к бд в отладке завернуть в отдельный скрипт child_process и запросы r tyve выполнять через sync-request:
- https://www.npmjs.com/package/sync-request
-
-
+права доступа проверять только в crud запросах на входе от клиента. А не в функциях записи чтения удаления апдейта записей в бд. Эти функции вызываются из хендлеров и там доступ весь всегда. Юзер туда передается только для привязки юзера и группы.
 
 аюекапить базу и Сканануть https://sqlmap.org/
 
-Добавить фильтр уже выбраных гифтов.
 
-Все возвращаемые хендлеры паренести в афтер апдейт и пвтеркриейт.
+Все возвращаемые хендлеры паренести в афтер апдейт и автеркриейт.
 
 Сделать безопасный выход с ожиданием всех запросов и закрытием прослушки сокета сразу. При закрытии сейвить сессии при старте зпгружать сессии.
 
@@ -67,10 +65,6 @@ Deploy data for _tables by default
 сделать деплой релизного билда. версионность по папкам.
 
 в релизе настроить CDN заголовки кеша. апи на поддомене.
-
-полнотекcтовый поиск:
-Use mysql>Alter table students ADD FULLTEXT (first_name, last_name);
-mysql>Select * from students where match(first_name, last_name) AGAINST (‘Jones’);
 
 
 
