--- a/todo.txt
+++ b/todo.txt
@@ -1,24 +1,25 @@
 
-заменть mysql на pg
-
 preact всместо реакта
 
+переписать все компоненты на типизацию.  У класса геттеры .parent который укорачивает .props.parent
 
-
-field_roles_view, create, update
-
+у типа поля тип данных отдельно тип рендерера отдельно.
 
 енум типНоды   раздел. документ. noDBdoc
 
 енум тип поля.  stored  no-stored  client-side-only
 
-енум где рендерить поле. в форме, меню, футере, хеадере.
+
+енум где рендерить поле. в форме, меню, футере, хеадере. социал кнопку переместить в футер
+
+field_roles_view, create, update
 
 при создании поля индекс надывать имя поля + имя ноды
 
+при создании ноды status id userid orgid все типы как надо сделать. serial4 и т д. проверить что автоинкремент работает.
+
 Crud id ноды текстовый не номер url тоже 
 
-фореинг рестрикшны не созвавать в коде
 
 права доступа проверять только в crud запросах на входе от клиента. А не в функциях записи чтения удаления апдейта записей в бд. Эти функции вызываются из хендлеров и там доступ весь всегда. Юзер туда передается только для привязки юзера и группы.
 
@@ -33,7 +34,6 @@ Crud id ноды текстовый не номер url тоже
 
 ключи у langs не выставляются.
 
-Add placement enum field to field. Body, footer (after save button), header. Move social button to footer.
 
 Префиксы локализации добавить CORE_
 
@@ -62,7 +62,7 @@ ENV enforce login option
 
 Deploy data for _tables by default
 
-сделать деплой релизного билда. версионность по папкам.
+сделать деплой релизного билда. версионность по файлам
 
 в релизе настроить CDN заголовки кеша. апи на поддомене.
 
