--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,14 @@
 
+
+проверить создание записей.
+проверить редактирование записей.
+редактирование создание клукап полей.
+
+
+
+проверить создание раздела.
+проверить создание поля.
+
 preact всместо реакта
 
 переписать все компоненты на типизацию.  У класса геттеры .parent который укорачивает .props.parent
