--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,8 @@
 
-
-проверить создание записей.
 проверить редактирование записей.
 редактирование создание клукап полей.
 
-
+ALTER TABLE _roles ALTER COLUMN _created_on SET DEFAULT now(); при создании раздела
 
 проверить создание раздела.
 проверить создание поля.
