--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,25 @@
 
-проверить редактирование записей.
-редактирование создание клукап полей.
+cерверный ts не видит типов генерированных  --typeRoots  --verbose
 
-ALTER TABLE _roles ALTER COLUMN _created_on SET DEFAULT now(); при создании раздела
+
+генерировать типы для всех записей со всеми полями?
+генерировать типы для enum из БД?
+
+
+Попробовать можно ли таблицы и поля в верхнем регистре
+
+
+
+ Сделать все поля и таблицы в кавычках в sql 
+Переименовать все без нижних подчеркиваний обратно через sql дамп
+Убрать снейктокемел
+Чекфиелднейм проверять нижнее прочерк чтобы небыло.
+
+
+
+
+
+ // TODO roles
 
 проверить создание раздела.
 проверить создание поля.
@@ -20,14 +37,8 @@ preact всместо реакта
 
 енум где рендерить поле. в форме, меню, футере, хеадере. социал кнопку переместить в футер
 
+
 field_roles_view, create, update
-
-при создании поля индекс надывать имя поля + имя ноды
-
-при создании ноды status id userid orgid все типы как надо сделать. serial4 и т д. проверить что автоинкремент работает.
-
-Crud id ноды текстовый не номер url тоже 
-
 
 права доступа проверять только в crud запросах на входе от клиента. А не в функциях записи чтения удаления апдейта записей в бд. Эти функции вызываются из хендлеров и там доступ весь всегда. Юзер туда передается только для привязки юзера и группы.
 
@@ -41,6 +52,8 @@ Crud id ноды текстовый не номер url тоже
 клик по аватару гостя открывает ошибку. Аватар гостя рендерится в прод билде
 
 ключи у langs не выставляются.
+
+//@ts-ignore удалить 
 
 
 Префиксы локализации добавить CORE_
