--- a/todo.txt
+++ b/todo.txt
@@ -1,25 +1,9 @@
 
- 
-прогнать все через преттиер
+
 
 генерировать типы для всех записей со всеми полями?
 генерировать типы для enum из БД?
 
-
-Попробовать можно ли таблицы и поля в верхнем регистре
-
-
-
- Сделать все поля и таблицы в кавычках в sql 
-Переименовать все без нижних подчеркиваний обратно через sql дамп
-Убрать снейктокемел
-Чекфиелднейм проверять нижнее прочерк чтобы небыло.
-
-
-
-
-
- // TODO roles
 
 проверить создание раздела.
 проверить создание поля.
@@ -44,6 +28,9 @@ field_roles_view, create, update
 
 аюекапить базу и Сканануть https://sqlmap.org/
 
+перенесть обрезку картинки на клиент.
+
+темная тема
 
 Все возвращаемые хендлеры паренести в афтер апдейт и автеркриейт.
 
