--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,10 @@
 
+типизовать ретурт getRecords по id 
+
+разделить обработчики событий формы по файлу на ноду и типизовать.
 
 
-генерировать типы для всех записей со всеми полями?
-генерировать типы для enum из БД?
-
-
-проверить создание раздела.
-проверить создание поля.
+подставить типы записей. типизация гетРекордс
 
 preact всместо реакта
 
@@ -20,6 +18,9 @@ preact всместо реакта
 
 
 енум где рендерить поле. в форме, меню, футере, хеадере. социал кнопку переместить в футер
+
+проверить создание раздела.
+проверить создание поля.
 
 
 field_roles_view, create, update
