client side getNodeData typing

--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,9 @@
-
-
-типизовать submit
-
-
-
+getNodeData типизоват
 
 
 Удалить все d.ts файлы
+
+preact всместо реакта
 
 
 разделить обработчики событий формы по файлу на ноду и типизовать.
@@ -16,9 +13,9 @@ client.on('_nodes.name.change', (data: InodeRecord, userSession):Result=>{
 });
 Вот так регать неотменяемые хендлеры. Типизовать server и client
 
+типизировать данные кастом вьюъх
 
 
-preact всместо реакта
 
 переписать все компоненты на типизацию.  У класса геттеры .parent который укорачивает .props.parent
 
