--- a/todo.txt
+++ b/todo.txt
@@ -1,17 +1,23 @@
 
 
-preact всместо реакта
+GetTecord. GetRecords.  Two separated methods passing inside one
+Submit вообще не требует примимать рекордс в виде массива один тип на нодуидАйди
+
+
+react-cropper  перенесть обрезку картинки на клиент.
+react-datetime - стандартное полe  input type="datetime-local"
+react-highlight-words
 
 
 разделить обработчики событий формы по файлу на ноду и типизовать.
 server.on('_nodes.create', (data: InodeRecord, userSession):Result=>{
 });
-client.on('_nodes.name.change', (data: InodeRecord, userSession):Result=>{
+
+client.on('_nodes.name.change', (form:FormFull<INodesRecord>):Result=>{
 });
-Вот так регать неотменяемые хендлеры. Типизовать server и client
+Вот так регать неотменяемые хендлеры. авто типизовать server и client
 
 типизировать данные кастом вьюъх
-
 
 
 переписать все компоненты на типизацию.  У класса геттеры .parent который укорачивает .props.parent
@@ -22,22 +28,19 @@ client.on('_nodes.name.change', (data: InodeRecord, userSession):Result=>{
 
 енум тип поля.  stored  no-stored  client-side-only
 
+полям форсить not-stored или client only если not-stored документ
 
 енум где рендерить поле. в форме, меню, футере, хеадере. социал кнопку переместить в футер
+
+field_roles_view, field_roles_create, field_roles_update  список ролей имеющих право на операции с полем
+
+аюекапить базу и Сканануть https://sqlmap.org/
+
+темная тема
 
 проверить создание раздела.
 проверить создание поля.
 
-
-field_roles_view, create, update
-
-права доступа проверять только в crud запросах на входе от клиента. А не в функциях записи чтения удаления апдейта записей в бд. Эти функции вызываются из хендлеров и там доступ весь всегда. Юзер туда передается только для привязки юзера и группы.
-
-аюекапить базу и Сканануть https://sqlmap.org/
-
-перенесть обрезку картинки на клиент.
-
-темная тема
 
 Все возвращаемые хендлеры паренести в афтер апдейт и автеркриейт.
 
