--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,29 @@
 
 
 
+
+
+
+FormNode от которого унаследовать Form и BaseField
+Все типизованые поля наследовать от BaseField и там методы renderField renerFielsEditable focusElementи encode decode Wrapper убрать.
+
+В FormNode parent, children.  onSave onLoad validate которыe асинхронно в паренты вызывается рекурсивно. focus метод baseField рекурсивно парентам кидает  beforeFocus метод FormNode и таб включает а потом afterFocus метод FormNode рекурсивно и скролит во вью фиелды,  апотом  одиночный привватный метод focusElement BaseField переопределяемый втипизованных классах поля.
+children у таба children свои поля. У поля  ссылка на поле tab которому оно принадлежит.
+
+alert метод рекурсвно кидает парентам onAlert(isSuccess) и табы рендерят красную или зеленую точку на кнопке таба если не активный таб.
+
+У формы childrenFields у поля parentForm
+
+
+
+
+
+
+
+
+
+
+
 показ полей имеющих хендлеры. переход к исходнику хендлера. поиск исходника по имени файла и имени подписки.
 создание хендлера в нужном файле.
 формы клиента разбить по файлам.
@@ -46,7 +69,7 @@ react-highlight-words
 
 Вверх вниз у поля переносит за первое видимое
 
-
+Пагинатору стрелки по бокам вперед назад
 
 Префиксы локализации добавить CORE_
 
