forms/fields structure full refactoring

--- a/todo.txt
+++ b/todo.txt
@@ -1,23 +1,13 @@
 
+лукапы:
+roles пользователя many 2 many
 
-FormNode от которого унаследовать Form и BaseField
-Все типизованые поля наследовать от BaseField и там методы renderField renerFielsEditable focusElementи encode decode Wrapper убрать.
-
-В FormNode parent, children.  onSave onLoad validate которыe асинхронно в паренты вызывается рекурсивно. focus метод baseField рекурсивно парентам кидает  beforeFocus метод FormNode и таб включает а потом afterFocus метод FormNode рекурсивно и скролит во вью фиелды,  апотом  одиночный привватный метод focusElement BaseField переопределяемый втипизованных классах поля.
-children у таба children свои поля. У поля  ссылка на поле tab которому оно принадлежит.
-
-alert метод рекурсвно кидает парентам onAlert(isSuccess) и табы рендерят красную или зеленую точку на кнопке таба если не активный таб.
-
-У формы childrenFields у поля parentForm
+many 2 1 - родитель раздела.
 
 
+удалить __olf файлы
 
-
-
-
-
-
-
+если при отпраке картинки или файла - ошибка то алертить поле чтобы не давало сохранить.
 
 
 показ полей имеющих хендлеры. переход к исходнику хендлера. поиск исходника по имени файла и имени подписки.
@@ -29,6 +19,8 @@ alert метод рекурсвно кидает парентам onAlert(isSucc
 у роли свойсвто defaultSection куда роль смотрит. брать с наибольшим id роли у пользователя.
 
 у типа поля тип данных отдельно тип рендерера отдельно.
+
+редактирование enum - прверять в пределах парента уникальность на фронте
 
 енум типНоды   раздел. документ. noDBdoc
 
