--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,9 @@
 
-лукапы:
-roles пользователя many 2 many
-
-many 2 1 - родитель раздела.
-
+create в лукапе
 
 удалить __olf файлы
+
+В админ файлы добавить креши что админ файлы импортированы в билд релизный.
 
 если при отпраке картинки или файла - ошибка то алертить поле чтобы не давало сохранить.
 
@@ -28,20 +26,29 @@ many 2 1 - родитель раздела.
 
 полям форсить not-stored или client only если not-stored документ
 
+У ноды поле server в котором вбивается имя по которому выбирается конекшн к pg
+это поле заполнять енум на стороне кода. видимо только если еще один кастомный pg коннекшн добавлен в индексе
+
+
 field_roles_view, field_roles_create, field_roles_update  список ролей имеющих право на операции с полем
 
 бекапить базу и Сканануть https://sqlmap.org/
+
 
 проверить создание раздела.
 проверить создание поля.
 
 serverOn hiPriority
 
+Если у формы несколько секунд asyncInProgress то алертить форму рамкой и кнопку админки трясти постоянно.
+
 Сделать безопасный выход с ожиданием всех запросов и закрытием прослушки сокета сразу. При закрытии сейвить сессии при старте загружать сессии.
 
 клик по аватару гостя открывает ошибку. Аватар гостя рендерится в прод билде
 
 ключи у langs не выставляются.
+
+extendEditor провериь перетаскивание  раскоментить dragStart
 
 react-cropper  перенесть обрезку картинки на клиент.
 Кроппер сделать зум колесом и драг. Без рамки и отдельной вьюхи
