ENV file usage fix images reuploading thumb removing fix recovery last data/1.sql file on empty database

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,9 @@
 
-
+флаг и ресторинг для requestOptions фичу сделать
 
 делать казино проект. парвильно втянуть проект через node_modules?
+
+
 
 проверить создание раздела.
 проверить создание поля.
@@ -11,6 +13,11 @@
 
 
 
+В лаунчТокен зашивать таймстемпTrandom и по нему определять истечение на клиенте lt=152625128TFGWT515625GGBGAYA162625516
+
+Если для лаунч токена на клиенте в торе есть плейтокен то коннектиться по нему. Если нет и ланч токен устарел то не коннектиться даже.
+
+На ббеке лаунч токены хранить в виде очереди и устаревшие по. Таймстемпу из начала очереди удалять или сыгравшие удалять после того как клиенту выслан плей токен
 
 
 
