--- a/todo.txt
+++ b/todo.txt
@@ -1,22 +1,60 @@
 
-флаг и ресторинг для requestOptions фичу сделать
+casino
+  сurrencies NtoM
+  maxExposureEUR number 9
+  betPattern с предпросмотром ставок
+  minSpinTime number - экспортруемое поле
+  maxAutospins number - экспортруемое поле
+  autospinsCounts текст (64) - '10,20,50,100,infinity'
+  gameTablesCustomization
 
-делать казино проект. парвильно втянуть проект через node_modules?
+
+game
+  modes 1toN
+  parentGame (если рескин)
+  exclusiveRelease boolean
+  exclusiveCasinos NtoM
+  RTP number 90.01   99.02
+  предпросмотр ставок по всем режимам с дефолтным паттерном 1,2,5,10
+
+gameTablesCustomization - нацелить на  n2m таблицу gameTablesCustomization
+	casino Nto1
+	game Nto1
+	RTP
+	betPattern
+	сurrencies
+  
+
+dump
+	dump: File reqired
+	eq: File reqired
+	limit: number из файла
+	baseBet: number из файла
+	addedBet: number из файла
+	features: stirng (255) из файла список фичей для предпросмотра
 
 
+curency
+  subunits
+  code
+  exponent
+  symbol
+  rateToEUR
 
-проверить создание раздела.
-проверить создание поля.
 
+удалять конфиги игр из памяти при правке казино или игры. и генерить по запросу и хранить в кеше в памяти.
+если сurrencies пустое - все валюты считать поддерживаемыми. 
 
+  
 
+Настройка ртп. В казино.  97.01 по умолчанию. В игре подтягивается мени то мени запись. либо сброс к ртп по умолчанию ужалением этой записи.. Ртп это произвольная цифра от 90.1 до 99.1
+
+Игры с кастомным ртп показывать на отдельном меню разделом ссылающимся на менитомени запись. У этого раздела name это ртп и две ссылки. На игру и на. Казино. Фильтр выбирает только своего казино.
 
 
 
 В лаунчТокен зашивать таймстемпTrandom и по нему определять истечение на клиенте lt=152625128TFGWT515625GGBGAYA162625516
-
 Если для лаунч токена на клиенте в торе есть плейтокен то коннектиться по нему. Если нет и ланч токен устарел то не коннектиться даже.
-
 На ббеке лаунч токены хранить в виде очереди и устаревшие по. Таймстемпу из начала очереди удалять или сыгравшие удалять после того как клиенту выслан плей токен
 
 
@@ -31,11 +69,9 @@
 
 
 
-
-
-
-
-
+_nodes скрывать draftable поле если не установлено  storeForm
+пофиксить перемещение полей. 
+draftable переместить рядом с storeForm
 
 
 Deploy.ts сделать дампинг через
