one by one events processing reload page after system entities update

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,15 @@
 
 дамп - имя тянуть из дампа.
 рефрешить данные списка после сохранения дампа.
+
+
+Таблицу изменений казино и игры дапма и валюты
+
+NodeId, fieldId, recordId, value. На формах кнопка истории открывающая модалку с этими парам5трами. Там кто ко7да что поменял
+
+
+
+
 загрузить все дампы чили беллс
 
 
