project imports fix

--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,6 @@
 
-
-Таблицу изменений казино и игры дапма и валюты
-
-NodeId, fieldId, recordId, value. На формах кнопка истории открывающая модалку с этими парам5трами. Там кто ко7да что поменял
-
+проверить кнопку истории  на games
+такуюже в  казино, дапм, валюты
 
 
 
@@ -13,7 +10,7 @@ NodeId, fieldId, recordId, value. На формах кнопка истории 
 
 game
 
-  предпросмотр ставок по всем режимам с дефолтным паттерном 1,2,5,10
+  вкладка предпросмотр ставок по всем режимам с дефолтным паттерном 1,2,5,10
 
 
 
