--- a/todo.txt
+++ b/todo.txt
@@ -1,36 +1,22 @@
 
-проверить кнопку истории  на games
-такуюже в  казино, дапм, валюты
 
-
-
-загрузить все дампы чили беллс
-
-
-
-game
-
-  вкладка предпросмотр ставок по всем режимам с дефолтным паттерном 1,2,5,10
+фильтровать уже выбранные валюты в казино   и казино в эксклюзив игре это сделать по умолчанию в n2m поле. кодом разрешать повторы
 
 
 
 
-Генерация конфигов  только через exportable поля + валюта
- 
-удалять конфиги игр из памяти при правке казино или игры. и генерить по запросу и хранить в кеше в памяти.
-если сurrencies пустое - все валюты считать поддерживаемыми. 
 
 
-Настройка ртп. В казино.  97.01 по умолчанию. В игре подтягивается мени то мени запись. либо сброс к ртп по умолчанию ужалением этой записи.. Ртп это произвольная цифра от 90.1 до 99.1
 
-Игры с кастомным ртп показывать на отдельном меню разделом ссылающимся на менитомени запись. У этого раздела name это ртп и две ссылки. На игру и на. Казино. Фильтр выбирает только своего казино.
+игровой сервер на веб сокетах 
+конфиг брать тут и слать на клиент
 
-  проверять имя файла 0 1 2 по индуксу в родителе. потом расширение дампов сделать dump.d0.json это пзволит accetp сделать .d0.json .eq0.json
- 
+http://127.0.0.1:1443/get-game-config?id=HotChilliBells&casino=dev&currency=EUR
+
 
 В лаунчТокен зашивать таймстемпTrandom и по нему определять истечение на клиенте lt=152625128TFGWT515625GGBGAYA162625516
 Если для лаунч токена на клиенте в торе есть плейтокен то коннектиться по нему. Если нет и ланч токен устарел то не коннектиться даже.
-На ббеке лаунч токены хранить в виде очереди и устаревшие по. Таймстемпу из начала очереди удалять или сыгравшие удалять после того как клиенту выслан плей токен
+На беке лаунч токены хранить в виде очереди и устаревшие по. Таймстемпу из начала очереди удалять или сыгравшие удалять после того как клиенту выслан плей токен
 
 
 
@@ -38,21 +24,16 @@ game
 
 
 
+Касомизации   только в казино.
+
+Ссылка на игру и валюту, обязательно к заполнению минимум одно из них,
+Кастомные поля -  1тоN на запись где Ссылка на экспортируемое поле либо паттерн, минбет и т д. И значение, которое сохраняется в виде текста.
+
+При генерации конфига получаем все кастомизации казино где валюта либо пустая либо совпадает, и игра либо пустая либо совпадает, и поля этой кастомизации применяем к конфигу в приоритете если есть. Иначе из данных game/casino
 
 
-casino
-  gameTablesCustomization
-предпросмотр ставок по всем режимам с дефолтным паттерном 1,2,5,10
 
 
-
-
-gameTablesCustomization - нацелить на  n2m таблицу gameTablesCustomization
-	casino Nto1
-	game Nto1
-	RTP
-	betPattern
-	сurrency - если пусто то на все.
 
 
 
