--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,5 @@
 
-
-фильтровать уже выбранные валюты в казино   и казино в эксклюзив игре это сделать по умолчанию в n2m поле. кодом разрешать повторы
-
-
-
-
-
+демо страницу казино
 
 
 игровой сервер на веб сокетах 
