--- a/todo.txt
+++ b/todo.txt
@@ -1,16 +1,26 @@
 
-демо страницу казино
+
+игровой сервер на веб сокетах
+
+получает demoPlay ссылку
+ретаргетит на страницу игровую с лаунч токеном.
+хостит страницу игры. девмод рендерит как HTML снаружи айфрейма если не em режим.
 
 
-игровой сервер на веб сокетах 
 конфиг брать тут и слать на клиент
 
 http://127.0.0.1:1443/get-game-config?id=HotChilliBells&casino=dev&currency=EUR
 
+игры запускать на ветке ws-api утилсам ветку ws-api
 
-В лаунчТокен зашивать таймстемпTrandom и по нему определять истечение на клиенте lt=152625128TFGWT515625GGBGAYA162625516
-Если для лаунч токена на клиенте в торе есть плейтокен то коннектиться по нему. Если нет и ланч токен устарел то не коннектиться даже.
+В лаунчТокен зашивать (таймстемп/60000)-random и по нему определять истечение на клиенте lt=152625128TFGWT515625GGBGAYA162625516
+Если для лаунч токена на клиенте в сторе есть плейтокен то коннектиться по нему. Если нет и ланч токен устарел то не коннектиться даже.
 На беке лаунч токены хранить в виде очереди и устаревшие по. Таймстемпу из начала очереди удалять или сыгравшие удалять после того как клиенту выслан плей токен
+
+
+показать Руслану ставки в игре.
+
+Запросить АПИ интеграции
 
 
 
