--- a/todo.txt
+++ b/todo.txt
@@ -1,30 +1,21 @@
+Анализ дампа на клиенте кнопкой в форме дампа
 
 
-игровой сервер на веб сокетах
-
-получает demoPlay ссылку
-ретаргетит на страницу игровую с лаунч токеном.
-хостит страницу игры. девмод рендерит как HTML снаружи айфрейма если не em режим.
+интегрировать с воллетом
+https://bgaming-docs.readme.io/v3.0/reference/create-real-session
 
 
-конфиг брать тут и слать на клиент
+В историю ставок добавлять только если fs 0
+В стейт всегда.
 
-http://127.0.0.1:1443/get-game-config?id=HotChilliBells&casino=dev&currency=EUR
+Если ошибка то дисконектим сокет.
 
-игры запускать на ветке ws-api утилсам ветку ws-api
 
-В лаунчТокен зашивать (таймстемп/60000)-random и по нему определять истечение на клиенте lt=152625128TFGWT515625GGBGAYA162625516
+В лаунчТокен только на игре реальной зашивать (таймстемп/60000)-random и по нему определять истечение на клиенте lt=152625128TFGWT515625GGBGAYA162625516
 Если для лаунч токена на клиенте в сторе есть плейтокен то коннектиться по нему. Если нет и ланч токен устарел то не коннектиться даже.
 На беке лаунч токены хранить в виде очереди и устаревшие по. Таймстемпу из начала очереди удалять или сыгравшие удалять после того как клиенту выслан плей токен
 
-
-показать Руслану ставки в игре.
-
-Запросить АПИ интеграции
-
-
-
-
+dev мод читы для игры.
 
 
 
@@ -38,14 +29,17 @@ http://127.0.0.1:1443/get-game-config?id=HotChilliBells&casino=dev&currency=EUR
 
 
 
+Убедиться что при новом подходе не выйдет выигрыш за макс экспожур. При макс ставке на всех режимах. Добавить ассерт который умножает макс ставку на макс множитель дампа
 
-
+Игры со статусом 2 сделать видимыми на dev казино
 
 Енв глобальными интерфейсами чтобы в проекте можно было расширить.
 
 _nodes скрывать draftable поле если не установлено  storeForm
 пофиксить перемещение полей. 
 draftable переместить рядом с storeForm
+
+Поле id зоздавать полностью невидимым и с классом monospace
 
 автосохранение файлов сделать сохранением файла в БД. Очистку тоже не забыть.
 
